# bloomcraft

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  bench_scalable_filter_concurrent.txt  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  release.yml  security.yml
.kiro/specs/bloomcraft-correctness/: requirements.md
.kiro/specs/bloomcraft-production-audit/: design.md  requirements.md
.kiro/steering/: product.md  structure.md  tech.md
benches/: atomic_partitioned_bench.rs  atomic_scalable_bench.rs  comparison.rs  comparison_bench.rs  concurrent.rs  counting_bench.rs  hash_functions.rs  historical.rs  historical_bench.rs  insert.rs  insert_batch.rs  memory.rs  partitioned_bench.rs  query.rs  query_batch.rs  register_blocked_bench.rs  scalable_bench.rs  scalable_filter.rs  sharded_bench.rs  sharded_bloom_filter.rs  standard_bench.rs  striped.rs  striped_bench.rs  tree_bench.rs
benches/common/: mod.rs
examples/: capacity_planning.rs  hash_basics.rs  hash_with_filters.rs
src/: error.rs  lib.rs
src/builder/: counting.rs  mod.rs  scalable.rs  standard.rs
src/core/: bitvec.rs  filter.rs  mod.rs  params.rs
src/filters/: atomic_partitioned.rs  atomic_scalable.rs  classic_bits.rs  classic_hash.rs  counting.rs  hierarchical.rs  mod.rs  partitioned.rs  register_blocked.rs  scalable.rs  standard.rs  tree.rs
src/hash/: hasher.rs  mod.rs  simd.rs  strategies.rs  wyhash.rs  xxhash.rs
src/metrics/: collector.rs  histogram.rs  mod.rs  partitioned_metrics.rs  tracker.rs
src/serde_support/: counting.rs  mod.rs  sharded.rs  standard.rs  striped.rs  zerocopy.rs
src/sync/: atomic_counter.rs  mod.rs  sharded.rs  striped.rs
src/util/: atomic.rs  bitops.rs  cache_detect.rs  mod.rs
tests/: basic.rs
