[package]
name = "bloomcraft"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["ZaudRehman <zaudrehman@gmail.com>"]
description = "Production-grade Bloom filter library for Rust with concurrent variants and optimal performance"
documentation = "https://docs.rs/bloomcraft"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZaudRehman/bloomcraft"
readme = "README.md"
keywords = ["bloom-filter", "probabilistic", "data-structure", "hashing", "concurrent"]
categories = ["data-structures", "algorithms", "concurrency"]

[dependencies]
# Core dependencies (always compiled)
num_cpus = "1.16"
thiserror = "1.0"

# Serialization support (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# Optional hash functions
xxhash-rust = { version = "0.8", features = ["xxh3"], optional = true }
wyhash = { version = "0.5", optional = true }

# Parallel processing (optional)
rayon = { version = "1.8", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rand = "0.8"
rayon = "1.8"
sysinfo = "0.30"
peak_alloc = "0.2"

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:bincode", "dep:bytemuck"]
xxhash = ["dep:xxhash-rust"]
wyhash = ["dep:wyhash"]
rayon = ["dep:rayon"]
simd = []
metrics = []
trace = []
concurrent = []
all-features = ["serde", "xxhash", "wyhash", "rayon", "simd", "metrics", "trace", "concurrent"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "insert_batch"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "query_batch"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "hash_functions"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "historical"
harness = false

[lib]
name = "bloomcraft"
path = "src/lib.rs"

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]