[package]
name = "bloomcraft"
version = "0.1.1"
edition = "2021"
rust-version = "1.73"
authors = ["ZaudRehman <zaudrehman@gmail.com>"]
description = "Production-grade Bloom filter library for Rust with concurrent variants and optimal performance"
documentation = "https://docs.rs/bloomcraft"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZaudRehman/bloomcraft"
readme = "README.md"
keywords = ["bloom-filter", "probabilistic", "data-structure", "hashing", "concurrent"]
categories = ["data-structures", "algorithms", "concurrency"]

[dependencies]
# Core dependencies (always compiled)
num_cpus = "1.16"
thiserror = "1.0"
parking_lot = "0.12"
smallvec = { version = "1.13", default-features = false, features = ["union"] }

# Serialization (all gated behind the "serde" feature)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# Optional hash functions
xxhash-rust = { version = "0.8", features = ["xxh3"], optional = true }

# Parallel processing (optional)
rayon = { version = "1.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
sysinfo = "0.30"
peak_alloc = "0.2"
rand_chacha = "0.9.0"
bincode = "1.3"
serde_json = "1.0"

[features]
default = []
serde   = ["dep:serde", "dep:serde_json", "dep:bytemuck"]
bincode = ["serde", "dep:bincode"]
xxhash = ["dep:xxhash-rust"]
wyhash = []
rayon = ["dep:rayon"]
simd = []
metrics = []
trace = []
concurrent = []
proptest = []
all-features = ["serde", "bincode", "xxhash", "wyhash", "rayon", "simd", "metrics", "trace", "concurrent", "proptest"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "historical_bench"
harness = false

[[bench]]
name = "striped_bench"
harness = false

[[bench]]
name = "tree_bench"
harness = false

[[bench]]
name = "sharded_bench"
harness = false

[[bench]]
name = "standard_bench"
harness = false

[[bench]]
name = "counting_bench"
harness = false

[[bench]]
name = "scalable_bench"
harness = false

[[bench]]
name = "atomic_scalable_bench"
harness = false
required-features = ["concurrent"]

[[bench]]
name = "register_blocked_bench"
harness = false

[[bench]]
name = "partitioned_bench"
harness = false

[[bench]]
name = "atomic_partitioned_bench"
harness = false
required-features = ["concurrent"]

[[bench]]
name = "comparison_bench"
harness = false

[[example]]
name = "capacity_planning"
path = "examples/capacity_planning.rs"

[[example]]
name = "hash_basics"
path = "examples/hash_basics.rs"
required-features = ["wyhash", "xxhash"]

[[example]]
name = "hash_with_filters"
path = "examples/hash_with_filters.rs"
required-features = ["wyhash", "xxhash"]

[lib]
name = "bloomcraft"
path = "src/lib.rs"

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
